# altro-cpp

./: .gitignore  CMakeLists.txt  README.md  run.sh
altro/augmented_lagrangian/: al_solver.hpp
altro/common/: solver_stats.hpp
altro/constraints/: constraint.hpp  constraint_values.hpp
altro/ilqr/: knot_point_function_type.hpp
altro/problem/: integration.hpp
altro/utils/: utils.hpp
examples/: CMakeLists.txt  basic_constraints.hpp  car_kin.cpp  car_kin.hpp  reference_line.cpp  reference_line.hpp  traj_plan_cost.cpp  traj_plan_cost.hpp  unicycle.cpp
examples/problems/: CMakeLists.txt  car_extended.cpp  car_extended.hpp  truck.cpp  truck.hpp
test/augmented_lagrangian/: auglag_test.cpp
test/constraints/: CMakeLists.txt  constraints_test.cpp
test/examples/: CMakeLists.txt  example_car_test.cpp  example_truck_test.cpp  example_unicycle_test.cpp
test/ilqr/: ilqr_test.cpp
test/problem/: CMakeLists.txt  costfunction_test.cpp  traj_plan_cost_test.cpp  triple_integrator_test.cpp  unicycle_test.cpp
